swagger fix v2
