# controllers/userData.js
@@ -1,4 +1,4 @@
-import { HttpErr } from "../helpers/index.js";
+import { calculateBMR, HttpErr } from "../helpers/index.js";
 import UserData, {
   userStatSchema,
   userStatUpdateSchema,
@@ -13,70 +13,71 @@ const add = async (req, res) => {
   if (userData) {
     throw HttpErr(400, "User's data already exist");
   }
-
-  const result = await UserData.create({ ...req.body, owner });
+  const calculations = calculateBMR(req.body)
+  const result = await UserData.create({ ...req.body,...calculations, owner });
   res.status(201).json(result);
 };
 
-const calculateCalories = async (req, res) => {
-  const { _id: owner } = req.user;
+// const calculateCalories = async (req, res) => {
+//   const { _id: owner } = req.user;
 
-  const calculations = await UserData.find({ owner });
-  if (!calculations) {
-    throw HttpErr(400, "Calculations is empty");
-  }
+//   const calculations = await UserData.find({ owner });
+//   if (!calculations) {
+//     throw HttpErr(400, "Calculations is empty");
+//   }
 
-  const {
-    height,
-    currentWeight,
-    desiredWeight,
-    birthday,
-    blood,
-    sex,
-    levelActivity,
-  } = calculations[0];
-  const activityCoefficients = {
-    1: 1.2,
-    2: 1.375,
-    3: 1.55,
-    4: 1.725,
-    5: 1.9,
-  };
-  const activityCoefficient = activityCoefficients[levelActivity];
-  const isMale = sex === "male";
-  const baseMetabolicRate = isMale
-    ? (10 * currentWeight +
-        6.25 * height -
-        5 * (new Date().getFullYear() - new Date(birthday).getFullYear()) +
-        5) *
-      activityCoefficient
-    : (10 * currentWeight +
-        6.25 * height -
-        5 * (new Date().getFullYear() - new Date(birthday).getFullYear()) -
-        161) *
-      activityCoefficient;
+//   const {
+//     height,
+//     currentWeight,
+//     desiredWeight,
+//     birthday,
+//     blood,
+//     sex,
+//     levelActivity,
+//   } = calculations[0];
+//   const activityCoefficients = {
+//     1: 1.2,
+//     2: 1.375,
+//     3: 1.55,
+//     4: 1.725,
+//     5: 1.9,
+//   };
+//   const activityCoefficient = activityCoefficients[levelActivity];
+//   const isMale = sex === "male";
+//   const baseMetabolicRate = isMale
+//     ? (10 * currentWeight +
+//         6.25 * height -
+//         5 * (new Date().getFullYear() - new Date(birthday).getFullYear()) +
+//         5) *
+//       activityCoefficient
+//     : (10 * currentWeight +
+//         6.25 * height -
+//         5 * (new Date().getFullYear() - new Date(birthday).getFullYear()) -
+//         161) *
+//       activityCoefficient;
 
-  const dailyCalories = baseMetabolicRate * activityCoefficient;
-  const dailyExerciseTime = 110;
+//   const dailyCalories = baseMetabolicRate * activityCoefficient;
+//   const dailyExerciseTime = 110;
 
-  res.status(200).json({
-    dailyCalories,
-    dailyExerciseTime,
-  });
-};
+//   res.status(200).json({
+//     dailyCalories,
+//     dailyExerciseTime,
+//   });
+// };
 const updateById = async (req, res) => {
   const { _id: owner } = req.user;
+  
   const result = await UserData.findOneAndUpdate({ owner }, req.body);
-  console.log(result);
-
   if (!result) {
     throw HttpErr(400, "Calculations is empty");
   }
-  res.json(result);
+
+  const calculations = calculateBMR(result);
+const calculatedResult = await UserData.findOneAndUpdate({ owner },calculations);
+  res.json(calculatedResult);
 };
 
 export default {
   add: ctrlWrapper(add),
-  calculateCalories: ctrlWrapper(calculateCalories),
   updateById: ctrlWrapper(updateById),
 };
